[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/powerups/speed-ball.png" type="Texture" id=1]
[ext_resource path="res://scenes/powerups/PowerUp.gd" type="Script" id=2]
[ext_resource path="res://scenes/powerups/powerUp2.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="PowerUp" type="Area2D" groups=[
"PowerUp",
]]
collision_layer = 0
collision_mask = 2147483652
script = ExtResource( 2 )

[node name="PickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_PowerUp_body_entered"]
